Fix letter spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,6 +214,7 @@
 .h1 {
   color: var(--white);
   font-size: var(--fs-40);
+  letter-spacing: .05em;
 }
 
 .h2,
